--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "GSproject",
   "version": "1.0.0",
   "description": "A basic Node.js project",
   "main": "index.js",
